Fix GameCard dragging visuals flickering when dragging over the (+) indicator in Chromium

--- a/src/components/GameGrid.css
+++ b/src/components/GameGrid.css
@@ -95,6 +95,7 @@
         filter: drop-shadow(0 0 1px black) drop-shadow(0 0 3px var(--pf-btn-primary));
         border-radius: 50%;
         transition: 0.3s ease;
+        pointer-events: none;
     }
 
     &.doesnt-have-dragged-tag {
